arr-stack/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-kube
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8181
  selector:
    app: tautulli-kube
