arr-stack/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tautulli.rossreicks.com
    external-dns.alpha.kubernetes.io/target: home.rossreicks.com
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  rules:
    - host: tautulli.rossreicks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli-kube
                port:
                  number: 80
